Fix alignment issue with journals

--- a/src/main/resources/static/css/app.scss
+++ b/src/main/resources/static/css/app.scss
@@ -200,3 +200,9 @@ a:hover {
 .bootstrap-select.btn-group .dropdown-menu li a {
     text-align: left;
 }
+
+.container{
+    width: 1110px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
